--- a/index.htm
+++ b/index.htm
@@ -134,6 +134,9 @@ body{
 background-image: url("bkg.png");
 overflow:hidden;
 background-size:cover;
+ background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 
 }
 #btn{
@@ -321,6 +324,7 @@ to{bottom:100vh;}
 
 </style>
 </html>
+
 
 
 
