--- a/index.htm
+++ b/index.htm
@@ -57,7 +57,7 @@
 <audio id="loveSong" src="love.mp3" preload="auto"></audio>
 <div style="height: 120vh;"></div>
   <div id="gift">
-  <img src="bouquet.png" alt="Flowers">
+  <img src="bouquet.png" id="boqueut" alt="Flowers">
 </div>
 
 
@@ -321,9 +321,15 @@ to{bottom:100vh;}
   width: 500px;
   animation: fadeIn 3s ease forwards;
 }
-
+#bouquet{
+  width: 700px;   /* try 700–900 if you want WOW */
+  height: auto;
+  display: block;
+  margin: 0 auto;
+}
 </style>
 </html>
+
 
 
 
